WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138846
REGRESSION(
r152313
): Inline-block element doesn't wrap properly
https://bugs.webkit.org/show_bug.cgi?id=138846
Summary
REGRESSION(r152313): Inline-block element doesn't wrap properly
Dave Hyatt
Reported
2014-11-18 14:34:30 PST
Inline-block element doesn't wrap properly because of regression regarding empty inline break position testing.
Attachments
Patch
(4.35 KB, patch)
2014-11-18 14:37 PST
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-11-18 14:37:07 PST
Created
attachment 241814
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-11-18 14:39:12 PST
Comment on
attachment 241814
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=241814&action=review
> Source/WebCore/ChangeLog:8 > + No new tests (OOPS!).
OOPS!
> LayoutTests/fast/inline-block/inline-block-empty-spans-expected.html:4 > + <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
No need for this.
> LayoutTests/fast/inline-block/inline-block-empty-spans-expected.html:5 > + <title>FileInput</title>
Or this.
> LayoutTests/fast/inline-block/inline-block-empty-spans-expected.html:17 > + table { > + width: 130px; > + border-collapse:collapse; > + } > + .button { > + display: inline-block; > + padding: 5px; > + margin: 3px; > + background: green; > + min-width: 100px; > + }
Weird spacing.
> LayoutTests/fast/inline-block/inline-block-empty-spans-expected.html:31 > + <td> > + <div> > + <span class="button">One</span> > + <span class="button">Two</span> > + <span class="button">Three</span> > + </div> > + </td> > + </tr>
Weird whitespace. Tabs?
> LayoutTests/fast/inline-block/inline-block-empty-spans.html:5 > + <META http-equiv="Content-Type" content="text/html; charset=UTF-8"> > + <title>FileInput</title>
Boo
> LayoutTests/fast/inline-block/inline-block-empty-spans.html:17 > + table { > + width: 130px; > + border-collapse:collapse; > + } > + .button { > + display: inline-block; > + padding: 5px; > + margin: 3px; > + background: green; > + min-width: 100px; > + }
Weird spacing.
> LayoutTests/fast/inline-block/inline-block-empty-spans.html:29 > + <tr> > + <td> > + <div> > + <span class="button">One</span><span class="button">Two</span><span class="button">Three</span><span> </span> > + </div> > + </td> > + </tr>
Yeah.
WebKit Commit Bot
Comment 3
2014-11-18 14:40:12 PST
Attachment 241814
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 4
2014-11-18 14:52:08 PST
Fixed in
r176287
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug