REGRESSION(r152313): Inline-block element doesn't wrap properly https://bugs.webkit.org/show_bug.cgi?id=138846 - <rdar://problem/18838703>

Reviewed by Simon Fraser.

Source/WebCore:

Added fast/inline-block/inline-block-empty-spans.html

* rendering/line/BreakingContextInlineHeaders.h:
(WebCore::BreakingContext::canBreakAtThisPosition):

LayoutTests:

* fast/inline-block/inline-block-empty-spans-expected.html: Added.
* fast/inline-block/inline-block-empty-spans.html: Added.



Canonical link: https://commits.webkit.org/156700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176287 268f45cc-cd09-0410-ab3c-d52691b4dbfc